--- a/client-app/index.html
+++ b/client-app/index.html
@@ -1,24 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>PWA with Background Sync</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Corrida Page</title>
   <link rel="image" sizes="192x192" href="/imagems/icon-192.png">
   <link rel="image" sizes="512x512" href="/imagems/icon-512.png">
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <!-- Bootstrap CSS (CDN) -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      margin: 0; padding: 0;
+      font-family: Arial, sans-serif;
+    }
+    .banner {
+      background: linear-gradient(to right, #6a11cb, #2575fc);
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .banner h1 { margin: 0; font-size: 2.5rem; }
+    .main-content { padding: 2rem 1rem; }
+  </style>
 </head>
 <body>
-  <h1>PWA with Background Sync</h1>
-  <p id="consent-message">This app collects your approximate location every 5 minutes. Do you agree?</p>
-  <button id="install-button">Install App</button>
-  <button id="consent-button">I Agree</button>
-  <script src="app.js"></script>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/index.html">My Race</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="/login.html">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/register.html">Register</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Banner / Hero Section -->
+  <header class="banner">
+    <h1>Welcome to the Race Portal</h1>
+  </header>
+
+  <!-- Main Page Content -->
+  <div class="main-content container">
+    <h2>Main Page</h2>
+    <p>
+      This is the main page content. If you load this page with a
+      <code>?corrida=NUMBER</code> parameter in the URL, a modal will
+      automatically pop up showing the corrida number and driver name fields.
+    </p>
+    <p>Example: <code>https://example.com/index.html?corrida=123</code></p>
+  </div>
+
+  <!-- Modal -->
+  <div
+    class="modal fade"
+    id="corridaModal"
+    tabindex="-1"
+    aria-labelledby="corridaModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="corridaModalLabel">Corrida Details</h5>
+          <button
+          id="install-button"
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>
+            <strong>Corrida Number:</strong>
+            <span id="corridaNumber"></span>
+          </p>
+          <div class="mb-3">
+            <label for="driverName1" class="form-label">Driver Name 1</label>
+            <input type="text" class="form-control" id="driverName1" />
+          </div>
+          <div class="mb-3">
+            <label for="driverName2" class="form-label">Driver Name 2</label>
+            <input type="text" class="form-control" id="driverName2" />
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-dismiss="modal"
+            id="startRideBtn">
+            Start Ride
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS (Bundle w/ Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js').then(() => {
             console.log('Service Worker registered!');
         }).catch(err => console.error('SW registration failed:', err));
     }
+    document.addEventListener("DOMContentLoaded", function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const corridaParam = urlParams.get("corrida");
+      if (corridaParam) {
+        document.getElementById("corridaNumber").innerText = corridaParam;
+        const corridaModal = new bootstrap.Modal(document.getElementById("corridaModal"));
+        corridaModal.show();
+      }
+    });
   </script>
 </body>
 </html>
