--- a/client-app/access-pending.html
+++ b/client-app/access-pending.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Access Pending</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-</head>
-<body class="bg-light">
-  <div class="container text-center mt-5">
-    <h2>Access Pending</h2>
-    <p>Your account is confirmed, but an administrator has not enabled your access yet.</p>
-    <img src="https://via.placeholder.com/300x200?text=Pending+Access" alt="Pending Access"/>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Access Pending</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-light">
+    <div class="container text-center mt-5">
+      <h2>Access Pending</h2>
+      <p>
+        Your account is confirmed, but an administrator has not enabled your
+        access yet.
+      </p>
+      <img
+        src="https://via.placeholder.com/300x200?text=Pending+Access"
+        alt="Pending Access"
+      />
+    </div>
+  </body>
 </html>
