--- a/client-app/register.html
+++ b/client-app/register.html
@@ -1,66 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register</title>
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-</head>
-<body class="bg-light">
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-md-6">
-      <h3>Register</h3>
-      <form id="registerForm">
-        <div class="mb-3">
-          <label for="regEmail" class="form-label">Email</label>
-          <input type="email" class="form-control" id="regEmail" required />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Register</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-light">
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+          <h3>Register</h3>
+          <form id="registerForm">
+            <div class="mb-3">
+              <label for="regEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="regEmail" required />
+            </div>
+            <div class="mb-3">
+              <label for="regPassword" class="form-label">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="regPassword"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+            <a href="/login.html" class="btn btn-link">Login</a>
+          </form>
+          <div id="registerMessage" class="mt-3"></div>
         </div>
-        <div class="mb-3">
-          <label for="regPassword" class="form-label">Password</label>
-          <input type="password" class="form-control" id="regPassword" required />
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-        <a href="/login.html" class="btn btn-link">Login</a>
-      </form>
-      <div id="registerMessage" class="mt-3"></div>
+      </div>
     </div>
-  </div>
-</div>
 
-<!-- Bootstrap JS (Bundle w/ Popper) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-document.getElementById("registerForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const email = document.getElementById("regEmail").value;
-  const password = document.getElementById("regPassword").value;
+    <!-- Bootstrap JS (Bundle w/ Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      document
+        .getElementById("registerForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const email = document.getElementById("regEmail").value;
+          const password = document.getElementById("regPassword").value;
 
-  try {
-    const res = await fetch("/auth/register", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ email, password }),
-    });
-    const data = await res.json();
+          try {
+            const res = await fetch("/auth/register", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ email, password }),
+            });
+            const data = await res.json();
 
-    if (!res.ok) {
-      document.getElementById("registerMessage").textContent = data.error || "Registration failed.";
-      document.getElementById("registerMessage").className = "text-danger";
-    } else {
-      // On successful registration, direct them to after-register page
-      window.location.href = "/after-register.html";
-    }
-  } catch (err) {
-    console.error(err);
-    document.getElementById("registerMessage").textContent = "Error registering.";
-    document.getElementById("registerMessage").className = "text-danger";
-  }
-});
-</script>
-</body>
+            if (!res.ok) {
+              document.getElementById("registerMessage").textContent =
+                data.error || "Registration failed.";
+              document.getElementById("registerMessage").className =
+                "text-danger";
+            } else {
+              // On successful registration, direct them to after-register page
+              window.location.href = "/after-register.html";
+            }
+          } catch (err) {
+            console.error(err);
+            document.getElementById("registerMessage").textContent =
+              "Error registering.";
+            document.getElementById("registerMessage").className =
+              "text-danger";
+          }
+        });
+    </script>
+  </body>
 </html>
