Added map page, imrpovements.

--- a/client-app/access-pending.html
+++ b/client-app/access-pending.html
@@ -10,6 +10,8 @@
     />
   </head>
   <body class="bg-light">
+    <div id="navbar"></div>
+
     <div class="container text-center mt-5">
       <h2>Access Pending</h2>
       <p>
@@ -21,5 +23,21 @@
         alt="Pending Access"
       />
     </div>
+
+    <script>
+      function logout() {
+        localStorage.removeItem("token");
+        localStorage.removeItem("role");
+        // Reload page or redirect
+        window.location.href = "/index.html";
+      }
+
+      // Load navbar
+      fetch("/navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar").innerHTML = data;
+        });
+    </script>
   </body>
 </html>
