--- a/client-app/admin.html
+++ b/client-app/admin.html
@@ -11,6 +11,8 @@
     />
   </head>
   <body class="bg-light">
+    <div id="navbar"></div>
+
     <div class="container mt-5">
       <h2>User Control Panel</h2>
       <p>Manage user accounts below:</p>
@@ -75,6 +77,7 @@
 
     <!-- Bootstrap JS (Bundle w/ Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 
     <script>
       let currentDeleteUserEmail = null; // Will store the email of the user we want to delete
