--- a/client-app/after-register.html
+++ b/client-app/after-register.html
@@ -10,6 +10,8 @@
     />
   </head>
   <body class="bg-light">
+    <div id="navbar"></div>
+
     <div class="container text-center mt-5">
       <h2>Thank you for registering!</h2>
       <p>
@@ -18,5 +20,22 @@
       </p>
       <a href="/login.html" class="btn btn-primary">Back to Login</a>
     </div>
+
+    <script>
+      function logout() {
+        localStorage.removeItem("token");
+        localStorage.removeItem("role");
+        // Reload page or redirect
+        window.location.href = "/index.html";
+      }
+
+      // Load navbar
+      fetch("/navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar").innerHTML = data;
+        });
+    </script>
+    <script src="app.js"></script>
   </body>
 </html>
