--- a/client-app/navbar.html
+++ b/client-app/navbar.html
@@ -20,7 +20,9 @@
           <a class="nav-link" href="/login.html" id="loginLink">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/register.html" id="registerLink">Register</a>
+          <a class="nav-link" href="/register.html" id="registerLink"
+            >Register</a
+          >
         </li>
 
         <!-- Map tab (hide by default) -->
