--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="image" sizes="192x192" href="/images/icon-192.png" />
+    <!-- link rel="image" sizes="192x192" href="/images/icon-192.png" />
     <link rel="image" sizes="512x512" href="/images/icon-512.png" />
     <link rel="image" href="/images/banner.png" />
-    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VRB - Portal de Corridas</title>
   </head>
